Cleaning up some code according to warning analysis